--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.2.6",
     "primevue": "^4.2.5",
     "sass": "^1.83.0",
